syntax = "proto3";

message File{
    string fileName = 1;
}

message StorageIps{
    repeated string storageIps = 1;
    string fileName = 2;
}


message FileChunk{
    string fileName = 1;
    bytes chunk = 2;
}

message UploadStatus {
    bool sucess = 1;
    string message = 2;
}

message TransactionResponse{
    int32 status_code = 1;
}

service FileManager{
    rpc createFile(storageIps) return (TransactionResponse){}
    rpc UploadFile(stream FileChunk) return (UploadStatus){}
}

